--- a/webviewUi/src/index.css
+++ b/webviewUi/src/index.css
@@ -138,6 +138,8 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin: 1.5rem 0;
+  display: block;
+  overflow-x: auto;
 }
 
 th,
